Fixed typos in Parts2/3.tex files

--- a/book/Parts/Part2.tex
+++ b/book/Parts/Part2.tex
@@ -6,7 +6,7 @@
 Some of the most powerful tools in classical mechanics, including fluid mechanics, are conservation laws. Arising from the profound physical insights of Newton, Leibniz, and others, these laws ensure that the total amount of certain physical quantities within a volume are conserved. For example, conservation of mass ensures that the total mass of a system remains constant, conservation of momentum ensures that the total momentum of a system remains constant, and conservation of energy ensures that the total energy of a system remains constant. While these concepts can be applied by a high-school student for simple systems, such as elastic/inelastic collisions between particles, their application to fluid mechanics is less trivial. Nevertheless, the fundamental concepts of conservation of mass, momentum, and energy still apply to fluids just as well as they do to individual particles, it is only the mathematics that becomes more complex. It is expected that students reading this book have already taken an undergraduate course in fluid mechanics and are familiar with conservation laws. Nevertheless, this chapter reviews these concepts for completeness, and to establish the notation used in the rest of the book. Some other useful references include~\cite{whiteFluidMechanics2015, hirschNumericalComputationInternal2007a, munsonFluidMechanics2013a}.
 
 \section{Reynolds Transport Theorem}\index{Reynolds Transport Theorem}
-Before tackling conservation of mass, momentum, and energy in their entirety, we will first consider an arbitrary conserved {\it extensive} quantity $U_{System} = U_{System}(t)$ of a moving system of fluid, which has a related quantity per unit volume $u = u(\vec{x},t)$, where $\vec{x}$ and $t$ are the spatial coordinate and time, respectively. For example, if the extensive property is mass, than the volumetric property is mass per unit volume, or density. We start by imagining a stationary control volume (CV) such as the one in Figure~\ref{fig:reynolds_transport_volume}, denoted by $\Omega$, that is the same shape as the fluid system at some time $t$. We also denote the surface of this volume by $S$ and the outward pointing normal vector on this surface by $\hat{n}$. After some amount of time $dt$, we can imagine that the initial system of fluid embedded within the control volume will move to a deformed position and shape at $t + dt$, while the control volume remains fixed by definition. In this manner the fluid contained by the system will be equal to that of the control volume at time $t$, plus any incoming or outgoing fluid due to the motion of the system system boundaries as it travels with the flow.
+Before tackling conservation of mass, momentum, and energy in their entirety, we will first consider an arbitrary conserved {\it extensive} quantity $U_{System} = U_{System}(t)$ of a moving system of fluid, which has a related quantity per unit volume $u = u(\vec{x},t)$, where $\vec{x}$ and $t$ are the spatial coordinate and time, respectively. For example, if the extensive property is mass, than the volumetric property is mass per unit volume, or density. We start by imagining a stationary control volume (CV) such as the one in Figure~\ref{fig:reynolds_transport_volume}, denoted by $\Omega$, that is the same shape as the fluid system at some time $t$. We also denote the surface of this volume by $S$ and the outward pointing normal vector on this surface by $\hat{n}$. After some amount of time $dt$, we can imagine that the initial system of fluid embedded within the control volume will move to a deformed position and shape at $t + dt$, while the control volume remains fixed by definition. In this manner the fluid contained by the system will be equal to that of the control volume at time $t$, plus any incoming or outgoing fluid due to the motion of the system boundaries as it travels with the flow.
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=0.5\linewidth]{Pictures/reytrans_volume}
@@ -233,7 +233,7 @@ Considering the compact integral form given in Equation \ref{eqn:compactintegral
 
 \chapter{Simplified Systems}
 
-One might notice that the Navier-Stokes equations derived in the previous chapter are a complex system of coupled non-linear partial differential equations. This is not something that sounds particularly easy to solve! Hence, in CFD we often consider {\it simplified} systems of equations first, neglecting or decoupling some of the physical mechanisms that are involved in the full Navier-Stokes equations. This allows us to play with different ideas quickly and with relative ease. Then, once we understand of how to solve different parts of these simplified equations, we will combine these ideas later to solve the full Navier-Stokes equations. 
+One might notice that the Navier-Stokes equations derived in the previous chapter are a complex system of coupled non-linear partial differential equations. This is not something that sounds particularly easy to solve! Hence, in CFD we often consider {\it simplified} systems of equations first, neglecting or decoupling some of the physical mechanisms that are involved in the full Navier-Stokes equations. This allows us to play with different ideas quickly and with relative ease. Then, once we understand how to solve different parts of these simplified equations, we will combine these ideas later to solve the full Navier-Stokes equations. 
 
 \section{Euler Equations}\index{Euler Equations}
 The Euler equations, although they were actually derived prior Navier-Stokes, can be obtained by simply neglecting viscous effects. Hence, we can ignore physical viscosity and thermal diffusion. While historically the Euler equations were the state-of-the-art in CFD, their lack of viscosity means they are unsuitable for predicting boundary layers. Nevertheless, they are still useful for predicting many flow phenomena, such as shockwaves.
@@ -1130,7 +1130,7 @@ The implementation of this model allows us to remove the incomplete condition fr
 \begin{equation}
     \tilde \nu_{wall} = 0,\quad \tilde\nu_{\infty}=3 \nu_{\infty}:to:5\nu_{v_\infty},
 \end{equation}
-Now, by solving Equations~\ref{eq:spalart_allmaras} and~\ref{eq:sa_eddyviscosity}, we are able to give closure to the RANS equations. Since only one additional equation is required, the relative computational cost of this turbulence model makes it appealling. Given that this model was initially developed for aerospace applications, it is a popular choice for the prediction of aerodynamic loads at low to moderate angles of attack due to relatively good resolution of boundary layer problems. 
+Now, by solving Equations~\ref{eq:spalart_allmaras} and~\ref{eq:sa_eddyviscosity}, we are able to give closure to the RANS equations. Since only one additional equation is required, the relative computational cost of this turbulence model makes it appealing. Given that this model was initially developed for aerospace applications, it is a popular choice for the prediction of aerodynamic loads at low to moderate angles of attack due to relatively good resolution of boundary layer problems. 
 
 Furthermore, the SA model is well-suited for applications using unstructured meshes. Despite its success in predicting aircraft performance, it has been found to unsuitable for flows that include jet-like free-shear regions and flows involving complex recirculation.
 \subsection{The k-$\epsilon$ Model}
