--- a/book/main.tex
+++ b/book/main.tex
@@ -46,6 +46,7 @@
 
 \input{structure.tex} % Insert the commands.tex file which contains the majority of the structure behind the template
 \usepackage{subcaption}
+\usepackage{float}
 %\hypersetup{pdftitle={Title},pdfauthor={Author}} % Uncomment and fill out to include PDF metadata for the author and title of the book
 
 %----------------------------------------------------------------------------------------
