Fixed typos in Parts I and II

--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -221,3 +221,10 @@
   year={1997},
   publisher={Elsevier}
 }
+
+@book{strogatz2018nonlinear,
+  title={Nonlinear dynamics and chaos with student solutions manual: With applications to physics, biology, chemistry, and engineering},
+  author={Strogatz, Steven H},
+  year={2018},
+  publisher={CRC press}
+}
