--- a/book/main.tex
+++ b/book/main.tex
@@ -105,6 +105,12 @@
 \noindent \textit{First printing, March 2019} % Printing/edition date
 
 %----------------------------------------------------------------------------------------
+%	FOREWORD
+%----------------------------------------------------------------------------------------
+
+\input{Parts/Part0.tex}
+
+%----------------------------------------------------------------------------------------
 %	TABLE OF CONTENTS
 %----------------------------------------------------------------------------------------
 
